--- a/package.json
+++ b/package.json
@@ -2,5 +2,17 @@
   "name": "homyPi-server-spotify",
   "version": "0.1.0",
   "author": "Youenn PENNARUN",
-  "license": "BSD-2-Clause"
+  "license": "BSD-2-Clause",
+  "dependencies": {
+    "lodash": "^3.10.1",
+    "mongoose": "^4.1.7",
+    "object-assign": "^4.0.1",
+    "q": "^1.4.1",
+    "qs": "^5.0.0",
+    "request": "^2.64.0",
+    "request-promise": "^0.4.3",
+    "winston": "^1.0.1",
+    "spotify-web-api-node": "^2.1.0",
+    "socket.io": "^1.3.6"
+  }
 }
