--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "winston": "^1.0.1",
     "spotify-web-api-node": "^2.1.0",
     "socket.io": "^1.3.6"
+  },
+  "scripts": {
+    "build": "echo 'nothing to build';"
   }
 }
